# AreYouPublic

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CODING_RULES.md  Dockerfile  FAIL.md  LEARN.md  LEGAL.md  LICENSE  PROCESS.md  PROJECT_PLAN.md  PROJECT_STATE.md  README.md  SECURITY_WORKFLOW.md  SRS.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: code-reviewer.md  process-executor.md  security-auditor.md  state-updater.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: # Code Citations.md  001_initial_schema.py
config/: data_brokers.json  platforms.json  search_categories.json
docs/superpowers/plans/: 2026-03-22-t3.1-search-module.md
docs/superpowers/specs/: 2026-03-22-t3.1-search-module-design.md
src/piea/: __init__.py  config.py  main.py
src/piea/api/: __init__.py  dependencies.py
src/piea/api/routes/: health.py  reports.py  scans.py
src/piea/api/schemas/: scan_request.py  scan_response.py
src/piea/core/: __init__.py  cache.py  consent.py
src/piea/db/: __init__.py  models.py  session.py
src/piea/modules/: __init__.py  base.py  categorizer.py  domain_intel.py  graph_crawler.py  hibp.py  hunter.py  paste_monitor.py  search.py
src/piea/modules/extractors/: __init__.py  base.py  bio_parser.py  github.py  gitlab.py  gravatar.py  keybase.py  mastodon.py  models.py  reddit.py
src/piea/modules/username/: __init__.py  checker.py  module.py  platforms.py  rate_limiter.py
tests/: conftest.py
tests/integration/: test_phase3_modules.py
tests/unit/: test_consent.py  test_domain_intel.py  test_extractors.py  test_graph_crawler.py  test_health.py  test_hibp.py  test_hunter.py  test_paste_monitor.py  test_result_categorizer.py  test_scan_request.py  test_search.py  test_username_checker.py  test_username_module.py  test_username_platforms.py  test_username_rate_limiter.py
